--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
  
+    <link rel="stylesheet" href="/src/App.css">
+
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
